--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "common/assets/scss/variables.sass";
+
 *{
   padding: 0;
   margin: 0;
@@ -21,6 +23,12 @@ html,body{
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+
+  background-color: $backgroundColor;
+  color: $primaryColor;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
 }
 input,button,textarea{font-family:inherit;}
 
