--- a/src/common/components/formSignInUp/formSignInUp.module.scss
+++ b/src/common/components/formSignInUp/formSignInUp.module.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/scss/mixins";
+@import "../../assets/scss/mixins";
 
 .login {
   @include Size;
@@ -12,37 +12,11 @@
     margin-bottom: 30px;
   }
 
-  .form {
-    @include FlexCenter(column, unset);
+  .btn {
     width: 100%;
-
-    .input {
-      width: 100%;
-      margin: 12px;
-    }
-
-    .checkBox {
-      align-self: flex-start;
-      margin: 12px;
-      .remember {
-        color: red;
-      }
-    }
-
-    .forgotPas {
-      align-self: flex-end;
-      margin-top: 15px;
-    }
-
-    .btn {
-      width: 100%;
-      margin: 60px 0 30px;
-    }
-
-    label {
-      @include FlexCenter
-    }
+    margin: 60px 0 30px;
   }
+
 
   .signUp {
     @include FlexCenter(column);
@@ -57,5 +31,39 @@
       text-decoration-line: underline;
       color: #366EFF;
     }
+  }
+}
+
+
+
+.form {
+  @include FlexCenter(column, unset);
+  width: 100%;
+
+  .input {
+    width: 100%;
+    margin: 12px;
+  }
+
+  .checkBox {
+    align-self: flex-start;
+    margin: 12px;
+    .remember {
+      color: red;
+    }
+  }
+
+  .forgotPas {
+    align-self: flex-end;
+    margin-top: 15px;
+  }
+
+  .btn {
+    width: 100%;
+    margin: 60px 0 30px;
+  }
+
+  label {
+    @include FlexCenter
   }
 }
