--- a/src/common/components/authorization/login/login.module.scss
+++ b/src/common/components/authorization/login/login.module.scss
@@ -1,7 +1,7 @@
 @import "../../../assets/scss/mixins";
 
-.login {
-  @include Size;
+.editProfile {
+  @include Size(413px, 360px);
   @include FlexCenter(column, unset);
 
   margin: 100px auto;
@@ -16,43 +16,13 @@
     @include FlexCenter(column, unset);
     width: 100%;
 
-    .input {
-      width: 100%;
-      margin: 12px;
+    .editableSpan {
+      margin-top: 20px;
     }
 
-    .checkBox {
-      align-self: flex-start;
-      margin: 12px;
-    }
-
-    .forgotPas {
-      align-self: flex-end;
-      margin-top: 15px;
-    }
-
-    .btn {
-      width: 100%;
-      margin: 60px 0 30px;
-    }
-
-    label {
-      @include FlexCenter
-    }
-  }
-
-  .signUp {
-    @include FlexCenter(column);
-    gap: 10px;
-
-    .account {
-      @include FontStyle(600, 14px, 24px, 0.5)
-    }
-
-    .signUpBtn {
-      @include FontStyle(600, 16px, 24px);
-      text-decoration-line: underline;
-      color: #366EFF;
+    .email {
+      @include FontStyle(400, 14px, 24px, 0.5);
+      margin: 20px 0 15px;
     }
   }
 }
