--- a/src/common/components/authorization/newPasswordInput/newPassword.module.scss
+++ b/src/common/components/authorization/newPasswordInput/newPassword.module.scss
@@ -1,12 +1,5 @@
 @import "../../../assets/scss/mixins";
 
-.newPassword {
-  @include Size(413px, 372px);
-  @include FlexCenter(column, unset);
-
-  margin: 100px auto;
-  padding: 35px 30px;
-
   .title {
     @include FontStyle(600, 26px, 32px);
     margin-bottom: 65px;
@@ -21,9 +14,8 @@
       margin-bottom: 20px;
     }
 
-    .btn {
-      width: 100%;
-      margin: 60px 0 30px;
+    .text {
+      @include FontStyle(400, 14px, 24px, 0.5);
+      margin-bottom: 50px;
     }
   }
-}
