--- a/src/common/components/authorization/registration/registration.module.scss
+++ b/src/common/components/authorization/registration/registration.module.scss
@@ -1,48 +1,36 @@
 @import "../../../assets/scss/mixins";
 
-.login {
-  @include Size;
+.title {
+  @include FontStyle(600, 26px, 32px);
+  margin-bottom: 30px;
+}
+
+.form {
   @include FlexCenter(column, unset);
+  width: 100%;
 
-  margin: 100px auto;
-  padding: 35px 30px;
-
-  .title {
-    @include FontStyle(600, 26px, 32px);
-    margin-bottom: 30px;
-  }
-
-  .form {
-    @include FlexCenter(column, unset);
+  .input {
     width: 100%;
-
-    .input {
-      width: 100%;
-      margin: 12px;
-    }
-
-    .btn {
-      width: 100%;
-      margin: 60px 0 30px;
-    }
-
-    label {
-      @include FlexCenter
-    }
+    margin-bottom: 20px;
   }
 
-  .signUp {
-    @include FlexCenter(column);
-    gap: 10px;
+  .btn {
+    margin-top: 60px;
+  }
+}
 
-    .account {
-      @include FontStyle(600, 14px, 24px, 0.5)
-    }
+.signUp {
+  @include FlexCenter(column);
+  gap: 10px;
+  margin-top: 30px;
 
-    .signUpBtn {
-      @include FontStyle(600, 16px, 24px);
-      text-decoration-line: underline;
-      color: #366EFF;
-    }
+  .account {
+    @include FontStyle(600, 14px, 24px, 0.5)
+  }
+
+  .signUpBtn {
+    @include FontStyle(600, 16px, 24px);
+    text-decoration-line: underline;
+    color: #366EFF;
   }
 }
