--- a/src/common/components/superComponents/superButton/SuperButton.module.scss
+++ b/src/common/components/superComponents/superButton/SuperButton.module.scss
@@ -1,14 +1,17 @@
 @import "../../../../common/assets/scss/mixins";
 .button {
     @include FlexCenter(row, center);
+    @include FontStyle(500, 16px, 20px);
+
     gap: 5px;
     border: none;
-    border-radius: 3px;
-    width: 132px;
-    height: 36px;
-}
-.default {
-    background: #0066CC;
+    min-width: 132px;
+    min-height: 36px;
+    width: 100%;
+
+    background: #366EFF;
+    box-shadow: 0 4px 18px rgba(54, 110, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+    border-radius: 30px;
     color: #FFFFFF;
 }
 .red {
