--- a/src/common/components/editProfile/editProfile.module.scss
+++ b/src/common/components/editProfile/editProfile.module.scss
@@ -1,1 +1,25 @@
+@import "../../assets/scss/mixins";
+
+  .title {
+    @include FontStyle(600, 26px, 32px);
+    margin-bottom: 30px;
+  }
+
+  .form {
+    @include FlexCenter(column, unset);
+    width: 100%;
+
+    .editableSpan {
+      margin-top: 20px;
+    }
+
+    .email {
+      @include FontStyle(400, 14px, 24px, 0.5);
+      margin: 20px 0 15px;
+    }
+
+    .btn {
+      width: 127px;
+    }
+  }
 
