add: user info in Header

--- a/src/pages/main/Header/Header.module.scss
+++ b/src/pages/main/Header/Header.module.scss
@@ -7,6 +7,10 @@
 
     .container {
         @include PageContainer;
-        @include FlexCenter
+        @include FlexCenter;
+
+        .btn {
+            width: 113px;
+        }
     }
 }
