--- a/src/common/components/btnBack/btnBack.module.scss
+++ b/src/common/components/btnBack/btnBack.module.scss
@@ -1,7 +1,9 @@
 @import "../../assets/scss/mixins";
 
 .block {
-  width: 155px;
+  width: 160px;
+  background-color: inherit;
+  padding: 5px 3px;
   @include FlexCenter;
   @include FontStyle(400, 14px, 24px)
 }
