--- a/src/common/components/btnBack/btnBack.module.scss
+++ b/src/common/components/btnBack/btnBack.module.scss
@@ -3,6 +3,7 @@
 .block {
   width: 160px;
   background-color: inherit;
+  margin-top: 25px;
   padding: 5px 3px;
   @include FlexCenter;
   @include FontStyle(400, 14px, 24px)
