--- a/src/common/components/superComponents/superInputText/SuperInputText.module.scss
+++ b/src/common/components/superComponents/superInputText/SuperInputText.module.scss
@@ -4,7 +4,12 @@
 }
 
 .input {
-    @include FontStyle(500, 16px, 24px)
+    @include FontStyle(500, 16px, 24px);
+    width: 100%;
+    padding: 5px 5px 5px 15px;
+    background: #FFFFFF;
+    border: 1px solid #D9D9D9;
+    border-radius: 2px;
 }
 
 .inputWrapper {
