--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,4 +1,4 @@
-@import "common/assets/scss/mixins";
+@import "../common/assets/scss/mixins";
 
 .main {
     font-family: 'Montserrat', sans-serif;
