--- a/src/common/components/superComponents/superInputText/SuperInputText.module.scss
+++ b/src/common/components/superComponents/superInputText/SuperInputText.module.scss
@@ -6,6 +6,7 @@
 .input {
     @include FontStyle(500, 16px, 24px);
     width: 100%;
+    height: 36px;
     padding: 5px 5px 5px 15px;
     background: #FFFFFF;
     border: 1px solid #D9D9D9;
